<resources>
    <string name="app_name">LearnAndroidApp</string>
    <string name="calculator">Calculator</string>
    <string name="sample_calculator">简单计算机</string>
    <string name="_0">0</string>
    <string name="_cancel">CE</string>
    <string name="_divide">÷</string>
    <string name="_multiply">×</string>
    <string name="_clear">C</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_plus">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_equal">=</string>
    <string name="_dot">.</string>
    <string name="_reciprocal">+/-</string>
    <string name="_sqrt">√</string>
    <string name="life_cycle">Life Cycle</string>
    <string name="response">Response</string>
    <string name="_switch">Switch开关</string>
    <string name="login_by_password">login by Password</string>
    <string name="verify_code">verify code</string>
    <string name="phone_number">phone number</string>
    <string name="input_phone_number">input phone number</string>
    <string name="login_password">login password</string>
    <string name="forget_passwords">forget</string>
    <string name="remember_password">remember password</string>
</resources>